# PortfolioManagementSystem

./: .gitignore
.github/workflows/: ci.yml
PortfolioAdviser/lib/api/include/: grpcAPI.h
PortfolioAdviser/lib/api/src/: portfolio.grpc.pb.cc  portfolio.pb.cc  serverGRPC.cpp
PortfolioAdviser/lib/storage/include/: DTOs.h  IStorageManageger.h
PortfolioAdviser/lib/storage/src/: IStorageManager.cpp
PortfolioBuilder/: CMakeLists.txt
PortfolioBuilder/app/: main.cpp
PortfolioBuilder/lib/api/: CMakeLists.txt
PortfolioBuilder/lib/api/include/: grcpApi.h
PortfolioBuilder/lib/api/src/: CMakeLists.txt  PortfolioBuilder.grpc.pb.cc  PortfolioBuilder.grpc.pb.h  PortfolioBuilder.pb.cc  PortfolioBuilder.pb.h  PortfolioBuilder.proto  grcpApi.cpp
PortfolioBuilder/lib/stockBuilder/: CMakeLists.txt
PortfolioBuilder/lib/stockBuilder/include/: stockBuilder.h
PortfolioBuilder/lib/stockBuilder/src/: stockBuilder.cpp
PortfolioBuilder/lib/storage/: CMakeLists.txt
PortfolioBuilder/lib/storage/include/: Storage.h
PortfolioBuilder/lib/storage/src/: Storage.cpp
PortfolioBuilder/tests/: CMakeLists.txt  GrpcApiTests.cpp  StockBuilderTests.cpp  StorageTests.cpp
briefcaseserver/lib/api/include/: grpcAPI.h  serverGRPC.h
briefcaseserver/lib/api/src/: breafcaseserver.grpc.pb.h  breafcaseserver.proto  briefcaseserver.grpc.pb.cc  briefcaseserver.grpc.pb.h  briefcaseserver.pb.cc  briefcaseserver.pb.h  briefcaseserver.proto  grpcAPI.cpp
briefcaseserver/lib/storage/include/: IStorageManageger.h
briefcaseserver/src/: breafcaseserver.grpc.pb.cc  breafcaseserver.pb.cc  breafcaseserver.pb.h  main.cpp
docs/: README.md
portfolioServer/app/: main.cpp
portfolioServer/lib/api/include/: serverGRPC.h
portfolioServer/lib/api/src/: grpcAPI.cpp  portfolio.grpc.pb.cc  portfolio.grpc.pb.h  portfolio.pb.cc  portfolio.pb.h  portfolio.proto  serverGRPC.cpp
(+4 files in other folders)
